--- a/src/components/Dropdown.css
+++ b/src/components/Dropdown.css
@@ -11,10 +11,11 @@
         background: none!important;
         border: none;
         padding: 0!important;
-        color: #069;
         text-decoration: underline;
         cursor: pointer;
         text-decoration: none;
+        font-size: 16px;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
   
   
@@ -25,7 +26,7 @@
     margin: 0;
     padding: 0;
     border-radius: 5px;
-    background-color: bisque;
+    background-color: rgb(186, 205, 228);
   }
   
   .menu-item {
