--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,7 +4,8 @@
     gap: 20px;
     height: 50px;
     align-items: center;
-    background-color: bisque;
+    background-color: rgb(186, 205, 228);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .navbar-container .nav-link {
