--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -11,3 +11,11 @@
 .navbar-container .nav-link {
     text-decoration: none;
 }
+
+
+@media only screen and (max-width: 576px) {
+    .navbar-container {
+        display: none;
+    }
+  };
+    
