Changed package for resizable component

--- a/src/components/ResizeImage.css
+++ b/src/components/ResizeImage.css
@@ -3,9 +3,12 @@
     cursor: grab;
   }
   
-  .item {
+  .resizable-item {
     background-image: url("../assets/images/animals/Deer.jpg");
     position: absolute;
     background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: solid 1px #ddd;
   }
-
