--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -1,55 +1,54 @@
 .carousel {
-    overflow: hidden;
-    width: 40%;
-    height: 300px;
-    margin: 0.4em;
-    border-radius: 0.4em;
-    
+	overflow: hidden;
+	width: 40%;
+	height: 300px;
+	margin: 0.4em;
+	border-radius: 0.4em;
 }
 
 .inner {
-    white-space: nowrap;
-    transition: transform 0.4s ease;
-    height: 100%;
-    width: 100%;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
-    border-radius: 0.1em;
+	white-space: nowrap;
+	transition: transform 0.4s ease;
+	height: 100%;
+	width: 100%;
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	display: flex;
+	border-radius: 0.1em;
 }
 
 .carousel-item {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    border: 0.1em solid black;
-    margin: 0.1em;
-    width: 100%;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	border: 0.1em solid black;
+	margin: 0.1em;
+	width: 100%;
 }
 
-.carousel-left
-{
-    display: grid;
-    place-items: center;
-    flex: 10%;
-    height: 100%;
-    background-color: rgb(0, 0, 0, 0.6);
-
+.carousel-left {
+	display: grid;
+	place-items: center;
+	flex: 10%;
+	height: 100%;
+	background-color: rgb(0, 0, 0, 0.6);
+	color: white;
+	cursor: pointer;
 }
 
-.carousel-center
-{
-    height: 100%;
-    flex: 80%;
+.carousel-center {
+	height: 100%;
+	flex: 80%;
 }
 
-.carousel-right
-{
-    display: grid;
-    place-items: center;
-    height: 100%;
-    flex: 10%;
-        background-color: rgb(0, 0, 0, 0.6);
+.carousel-right {
+	display: grid;
+	place-items: center;
+	height: 100%;
+	flex: 10%;
+	background-color: rgb(0, 0, 0, 0.6);
+	color: white;
+	cursor: pointer;
 }
