--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 .app-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 }
 
 .left-container {
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
+	width: 60%;
 }
