--- a/src/components/CardTemplate.css
+++ b/src/components/CardTemplate.css
@@ -1,14 +1,16 @@
 .rectangle {
-    display: inline-block;
-    border: 2px solid red;
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 300px;
-    height: 400px;
-    position: absolute;
-    top: 30%;
-    right: 50%;
-  }
+	display: inline-block;
+	border: 2px solid red;
+	background-size: contain;
+	background-repeat: no-repeat;
+	width: 300px;
+	height: 400px;
+	position: absolute;
+	top: 1px;
+	right: 0;
+	top: 30%;
+	right: 50%;
+}
 
 img {
 	width: 300px;
