--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,33 @@
+* {
+	box-sizing: border-box;
+}
+
+body {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	background-color: blue;
+}
+
+.App {
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
 .app-container {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 	width: 100%;
-
 }
 
 .left-container {
 	display: flex;
 	flex-direction: column;
 	width: 40%;
-
+	border-right: 1em solid black;
 }
