--- a/src/components/CarouselTest.css
+++ b/src/components/CarouselTest.css
@@ -1,9 +1,14 @@
 .carousel {
 	overflow: hidden;
-	width: 100%;
-	height: 300px;
+	width: 90%;
+	height: 350px;
 	margin: 0.4em;
 	border-radius: 0.4em;
+}
+.outer {
+	overflow: hidden;
+	height: 100%;
+	width: 100%;
 }
 .inner {
 	white-space: nowrap;
@@ -11,10 +16,11 @@
 	height: 100%;
 	width: 100%;
 	background-position: center;
-	background-size: cover;
+	background-size: contain;
 	background-repeat: no-repeat;
 	display: flex;
 	border-radius: 0.1em;
+	transition: ease-in-out 0.4s;
 }
 .carousel-item {
 	display: inline-flex;
