Added image on click from the carousel

--- a/src/components/CarouselTest.css
+++ b/src/components/CarouselTest.css
@@ -38,6 +38,10 @@
 	height: 100%;
 	flex: 80%;
 }
+
+.carousel-center:hover {
+	cursor: pointer;
+}
 .carousel-right {
 	display: grid;
 	place-items: center;
