--- a/src/components/CarouselTest.css
+++ b/src/components/CarouselTest.css
@@ -52,3 +52,13 @@
 	cursor: pointer;
 }
 
+.upload-image {
+	white-space: nowrap;
+	transition: transform 0.4s ease;
+	height: 100%;
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	display: flex;
+	border-radius: 0.1em;
+}
