--- a/src/components/CardTemplate.css
+++ b/src/components/CardTemplate.css
@@ -1,19 +1,18 @@
 .rectangle {
 	display: inline-block;
 	border: 2px solid red;
-	background-size: contain;
+	background-size: cover;
 	background-repeat: no-repeat;
 	width: 500px;
 	height: 550px;
-	top: 10%;
-	right: 10%;
 	margin-top: 30px;
+	background-image: url("../assets/images/Templates/birthday-template1.jpeg");
 }
 
 
 img {
 	max-height: 400px;
-	max-width: 400px;
+	max-width: 300px;
 }
 
 .card-template-container {
@@ -28,4 +27,5 @@ img {
 	position: relative;
 	margin: 10px;
 	top: 50px;
+	z-index: 5;
 }
