--- a/src/components/CardTemplate.css
+++ b/src/components/CardTemplate.css
@@ -15,6 +15,9 @@
 img {
   max-height: 400px;
   max-width: 300px;
+  border-radius: 10px;
+  border: 2px double red;
+
 }
 
 .card-template-container {
