Added image on template on the right side

--- a/src/components/CarouselTest.css
+++ b/src/components/CarouselTest.css
@@ -62,3 +62,11 @@
 	display: flex;
 	border-radius: 0.1em;
 }
+
+.right {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	gap: 30px;
+}
