--- a/src/components/CardTemplate.css
+++ b/src/components/CardTemplate.css
@@ -9,7 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url("../assets/images/Templates/birthday-template1.jpeg");
+  /* background-image: url("../assets/images/Templates/birthday-template1.jpeg"); */
 }
 
 img {
