--- a/src/components/ResizeImage.css
+++ b/src/components/ResizeImage.css
@@ -9,11 +9,16 @@
     border: 2px solid red;
     background-size: cover;
     background-repeat: no-repeat;
-    width: 500px;
-    height: 550px;
+    width: 420px;
+    height: 600px;
     margin-top: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
-    /* background-image: url("../assets/images/Templates/birthday-template1.jpeg"); */
+    background-image: url("../assets/images/Templates/birthday-template1.jpeg");
+  }
+
+  img {
+    max-height: 400px;
+    max-width: 300px;
   }
