Added functionality to category drawer, images now display based on clicked cstegory

--- a/src/components/CarouselTest.css
+++ b/src/components/CarouselTest.css
@@ -11,7 +11,7 @@
 	height: 100%;
 	width: 100%;
 	background-position: center;
-	background-size: cover;
+	background-size: contain;
 	background-repeat: no-repeat;
 	display: flex;
 	border-radius: 0.1em;
