--- a/src/components/CardTemplate.css
+++ b/src/components/CardTemplate.css
@@ -1,23 +1,20 @@
-
-
-img {
-  max-height: 400px;
-  max-width: 300px;
-
-}
-
-.card-template-container {
+.rectangle-template {
+  display: inline-block;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 420px;
+  height: 600px;
+  margin-top: 30px;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   align-items: center;
-  gap: 10px;
+  justify-content: center;
+  /* background-image: url("../assets/images/Templates/birthday-template1.jpeg"); */
 }
 
-.image-position {
+.rectangle-template img {
+  max-height: 600px;
+  max-width: 420px;
+  border: 2px solid red;
   position: relative;
-  margin: 10px;
-  top: 50px;
-  z-index: 5;
   align-self: center;
 }
