--- a/src/components/ResizeImage.css
+++ b/src/components/ResizeImage.css
@@ -3,22 +3,17 @@
     cursor: grab;
   }
   
-  
-  .rectangle {
-    display: inline-block;
-    border: 2px solid red;
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 420px;
-    height: 600px;
-    margin-top: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-image: url("../assets/images/Templates/birthday-template1.jpeg");
-  }
-
   img {
     max-height: 400px;
     max-width: 300px;
+
+  }
+
+  .resizable-item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 10%;
   }
