--- a/src/components/CardTemplate.css
+++ b/src/components/CardTemplate.css
@@ -8,13 +8,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  /* background-image: url("../assets/images/Templates/birthday-template1.jpeg"); */
 }
 
 .rectangle-template img {
   max-height: 600px;
   max-width: 420px;
-  border: 2px solid red;
-  position: relative;
+  position: absolute;
   align-self: center;
 }
