--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,11 @@
 	flex-direction: column;
 	width: 60%;
 }
+
+
+.download {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
