--- a/src/components/ResizeImage.css
+++ b/src/components/ResizeImage.css
@@ -3,17 +3,16 @@
     cursor: grab;
   }
 
-  .rectangle-image {
+  .rectangle-image .react-draggable {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
+    position: relative;
   }
 
   .rectangle-image img {
     max-height: 400px;
     max-width: 300px;
-    display: hide;
-
   }
 
