--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,15 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Alkatra&display=swap');
+
 .navbar-container {
     display: flex;
     justify-content: center;
     gap: 20px;
-    height: 50px;
+    height: 100px;
     align-items: center;
-    background-color: rgb(186, 205, 228);
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: rgba(236, 106, 20, 0.622);
+
 }
 
 .navbar-container .nav-link {
     text-decoration: none;
+}
+
+.navbar-title {
+    font-size: 50px;
+    color:blueviolet;
+    font-family: 'Alkatra', cursive;
 }
 
 
