--- a/src/components/CardTemplate.css
+++ b/src/components/CardTemplate.css
@@ -1,18 +1,29 @@
 .rectangle-template {
-  display: inline-block;
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 420px;
-  height: 600px;
-  margin-top: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	display: inline-block;
+	background-size: cover;
+	background-repeat: no-repeat;
+	width: 420px;
+	height: 600px;
+	margin-top: 30px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
+.rectangle {
+	display: inline-block;
+	background-size: cover;
+	background-repeat: no-repeat;
+	width: 420px;
+	height: 600px;
+	margin-top: 30px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 .rectangle-template img {
-  max-height: 600px;
-  max-width: 420px;
-  position: absolute;
-  align-self: center;
+	max-height: 600px;
+	max-width: 420px;
+	position: absolute;
+	align-self: center;
 }
