--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,24 @@
 	width: 60%;
 }
 
-
 .download {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+.title {
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+}
+
+h2 {
+	justify-content: center;
+	align-items: center;
+}
+
+.card {
+	background-color: black;
+	color: white;
 }
