Revert "New styling"

--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,16 @@
 @import "bulma/css/bulma.css";
 
-
-
-.container {
-	background-color: rgba(137, 43, 226, 0.088);
-	width: auto;
-	height: 150vh;
+.app-container {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	width: 100%;
 }
 
-.container h1 {
-	margin: 20px;
-	font-family: 'Alkatra', cursive;
-	color: blueviolet;
+.left-container {
+	display: grid;
+	flex-direction: column;
+	width: 60%;
 }
 
 .download {
