--- a/src/App.css
+++ b/src/App.css
@@ -2,21 +2,7 @@
 
 .app-container {
 	display: flex;
-	flex-direction: row;
-	align-items: center;
-	width: 100%;
-}
-
-.left-container {
-	display: grid;
-	flex-direction: column;
-	width: 60%;
-}
-
-.download {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	flex-wrap: nowrap;
 }
 
 .title {
@@ -30,7 +16,8 @@ h2 {
 	align-items: center;
 }
 
-.card {
-	background-color: black;
-	color: white;
+.card-to-display {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
