--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Alkatra&display=swap');
+
 .navbar-container {
 	display: flex;
 	justify-content: center;
@@ -5,14 +7,10 @@
 	height: 50px;
 	align-items: center;
 	background-color: black;
-	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-		"Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-
-.navbar-container .nav-link {
-	text-decoration: none;
-	color: white;
-	font-size: 20px;
+	height: 130px;
+	width: 100%;
+	font-family: 'Alkatra', cursive;
+	font-size: 50px;
 }
 
 p {
@@ -24,8 +22,3 @@ p {
 	text-align: center;
 }
 
-@media only screen and (max-width: 576px) {
-	.navbar-container {
-		display: none;
-	}
-} ;
