--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,14 @@
 @import "bulma/css/bulma.css";
 
-.app-container {
+.title {
+	margin: 20px;
+	font-family: 'Alkatra', cursive;
+	font-size: 50px;
+}
+
+.extras {
 	display: flex;
 	flex-direction: row;
-	align-items: center;
-	width: 100%;
-}
-
-.left-container {
-	display: grid;
-	flex-direction: column;
-	width: 60%;
-}
-
-.download {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.title {
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-}
-
-h2 {
-	justify-content: center;
-	align-items: center;
-}
-
-.card {
-	background-color: black;
-	color: white;
+	gap: 30px;
+	justify-content: flex-start;
 }
