--- a/src/components/ResizeImage.css
+++ b/src/components/ResizeImage.css
@@ -8,6 +8,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
+    z-index: 3;
   }
 
   .rectangle-image img {
