--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,35 +1,27 @@
 @import "bulma/css/bulma.css";
-
-.app-container {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	width: 100%;
-}
-
-.left-container {
-	display: grid;
-	flex-direction: column;
-	width: 60%;
-}
-
-.download {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Alkatra&display=swap');
 
 .title {
 	justify-content: center;
 	align-items: center;
 	text-align: center;
+	font-size: 50px;
+	font-family: 'Alkatra', cursive;
 }
 
-h2 {
+.category {
 	justify-content: center;
 	align-items: center;
+	font-family: 'Alkatra', cursive;
+	font-size: 30px;
+	margin-top: 40px;
 }
 
 .card {
 	color: white;
+}
+
+.content h2 {
+	font-size: 20px !important;
+	margin-top: 30px;
 }
