--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,6 +1,10 @@
 @import "bulma/css/bulma.css";
 @import url('https://fonts.googleapis.com/css2?family=Alkatra&display=swap');
 
+.columns.is-vcentered {
+	align-items: flex-start;
+}
+
 .title {
 	justify-content: center;
 	align-items: center;
@@ -13,8 +17,9 @@
 	justify-content: center;
 	align-items: center;
 	font-family: 'Alkatra', cursive;
-	font-size: 30px;
+	font-size: 32px;
 	margin-top: 40px;
+	font-weight: bold;
 }
 
 .card {
@@ -24,4 +29,19 @@
 .content h2 {
 	font-size: 20px !important;
 	margin-top: 30px;
+}
+
+.extras {
+	display: flex;
+	gap: 30px;
+
+}
+
+.middle {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	gap: 30px;
+	margin: 10px 40px;
+	
 }
