Added text on template

--- a/src/components/CardTemplate.css
+++ b/src/components/CardTemplate.css
@@ -16,3 +16,15 @@
 	position: absolute;
 	align-self: center;
 }
+
+
+.head-text {
+	position: relative;
+ }
+ .text-on-image {
+   position: absolute;
+   right: 50%;
+   left: 50%;
+   bottom: 15%;
+ }
+ 
