--- a/src/components/CardTemplate.css
+++ b/src/components/CardTemplate.css
@@ -1,32 +1,28 @@
 .rectangle-template {
-	display: inline-block;
-	background-size: cover;
-	background-repeat: no-repeat;
 	width: 420px;
 	height: 600px;
-	margin-top: 30px;
-	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin: 50px;
 }
 
 .rectangle-template img {
-	max-height: 700px;
+	max-height: 600px;
 	max-width: 520px;
 	position: absolute;
 	align-self: center;
-	margin-top: 40px;
 }
 
 
 .head-text {
 	position: relative;
  }
+
  .text-on-image {
    position: absolute;
-   right: 50%;
-   left: 50%;
-   bottom: 15%;
+   width: 40%;
+   margin: 20px;
+   right: 20%;
+   left: 20%;
+   top: 20%;
  }
  
