Fixed image on template, added position absolute

--- a/src/components/CardTemplate/CardTemplate.css
+++ b/src/components/CardTemplate/CardTemplate.css
@@ -1,14 +1,13 @@
 .rectangle-template {
-	width: 420px;
-	height: 600px;
+	width: 450px;
 	align-items: center;
 	justify-content: center;
 }
 
 .rectangle-template img {
 	max-height: 600px;
-	max-width: 520px;
-	position: absolute;
+	max-width: 550px;
+	position: relative;
 	align-self: center;
 }
 
@@ -19,10 +18,5 @@
 
  .text-on-image {
    position: absolute;
-   width: 40%;
-   margin: 20px;
-   right: 20%;
-   left: 20%;
-   top: 20%;
  }
  
