Fixed text input to move to a new line on enter

--- a/src/components/CardTemplate/CardTemplate.css
+++ b/src/components/CardTemplate/CardTemplate.css
@@ -15,14 +15,9 @@
 
 .head-text {
 	position: relative;
+	white-space: pre-wrap;
  }
 
  .text-on-image {
-   position: absolute;
-   width: 40%;
-   margin: 20px;
-   right: 20%;
-   left: 20%;
-   top: 20%;
+	white-space: pre-wrap;
  }
- 
