Added clear button to delete images and message

--- a/src/components/DownloadButton/DownloadButton.css
+++ b/src/components/DownloadButton/DownloadButton.css
@@ -4,7 +4,6 @@
   }
   
   .download-btn {
-    position: absolute;
     bottom: 20px;
     right: 10px;
     z-index: 10;
@@ -20,3 +19,8 @@
     opacity: 0.9;
   }
   
+  .card-buttons {
+    display: flex;
+    gap: 20px;
+    margin: 20px;
+  }
