Added uploading multiple images

--- a/src/components/DownloadButton/DownloadButton.css
+++ b/src/components/DownloadButton/DownloadButton.css
@@ -21,6 +21,7 @@
   
   .card-buttons {
     display: flex;
+    justify-content: flex-start;
     gap: 20px;
-    margin: 20px;
+    margin-top: 20px;
   }
