Added instructions, github links and a bit of styling

--- a/src/components/DownloadButton/DownloadButton.css
+++ b/src/components/DownloadButton/DownloadButton.css
@@ -8,7 +8,8 @@
     right: 10px;
     z-index: 10;
     border: 1px solid #eee;
-    background: #ebf8ff;
+    background: black;
+    color: white;
     padding: 10px 20px;
     border-radius: 5px;
     font-weight: 700;
