--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -22,9 +22,6 @@
 	font-weight: bold;
 }
 
-.card {
-	color: white;
-}
 
 .content h2 {
 	font-size: 20px !important;
@@ -44,4 +41,14 @@
 	gap: 30px;
 	margin: 10px 40px;
 	
+}
+
+ol {
+	width: 60%;
+	margin: 20px;
+	font-family: 'Alkatra', cursive;
+}
+
+body {
+	background-color: rgba(249, 235, 239, 0.086);
 }
