--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,14 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Alkatra&display=swap');
 
-.navbar-container {
+.footer-container {
 	display: flex;
 	justify-content: center;
 	gap: 20px;
+	height: 50px;
 	align-items: center;
 	background-color: black;
+	height: 50px;
 	width: 100%;
-	height: 70px !important;
 	font-family: 'Alkatra', cursive;
-	font-size: 50px;
-	color: white;
+	font-size: 16px;
+    color: white;
 }
+
+a {
+    color: white;
+}
+
+a:hover {
+    color: rgba(172, 172, 196, 0.492);
+}
+
